# NEO-ClassBoard

./: .gitignore  CMakeLists.txt  ClassSwapDialog.qml  ComponentSettingsPage.qml  CsesEditor.qml  NextClassWidget.qml  PLUGIN_DEV.md  PluginIcon.qml  README.md  Settings.qml  SettingsDialog.qml  TimeSection.qml  TrayMenu.qml  build.py  build.spec  classboard_plugin.py  classswapdialog.h  cses_editor.py  cses_parser.py  csesparser.h  main.cpp  main.py  main.qml  platform_utils.py  resources.qrc  run.bat  run.sh  sample_schedule.yml  schedule.yml  scheduleeditor.h  settingsdialog.h  stdout.txt  test_diag.py
.github/workflows/: build.yml
.trae/rules/: 严格使用md3风格.md
_cpp_backup/: CMakeLists.txt  ComponentSettingsPage.qml  ScheduleEditor.qml  SettingsDialog.qml  app.rc  classboardplugin.h  csesparser.h  main.cpp  main.qml  pluginmanager.cpp  pluginmanager.h  scheduleeditor.h  settingsdialog.h
_cpp_backup/md3/src/Core/Controls/: LinearProgress.qml
_cpp_backup/plugins/sampleplugin/: WeatherWidget.qml  sampleplugin.cpp  sampleplugin.h  sampleplugin.json  sampleplugin.qrc
md3/: CMakeLists.txt
md3/Core/Controls/: Switch.qml
md3/Core/Styles/: Theme.qml
plugins/countdown/: CountdownSettingsWidget.qml  CountdownWidget.qml  config.json  plugin.py
plugins/sampleplugin/: SampleWidget.qml  plugin.py
python/: ClassList.qml  ComponentSettingsPage.qml  Icon.qml  PluginSettingsPage.qml  README.md  cses_parser.py  main.py  main.qml  plugin_manager.py  style_manager.py
python/md3/Core/: qmldir
python/md3/Core/Styles/: Theme.qml
python/plugins/countdown/: settings.json
